*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -1,2 +1,4 @@
 [[სურათი:toga.png|thumb|ტოგა]]
-'''ტოგა''' ძველ რომში მამაკაცის ტრადიციული სამოსი. ტოგა იყო 6 მეტრის სიგრძის ოვალური ფორმის თეთრი შალის ნაჭერი, რომელსაც [[ტუნიკა|ტუნიკის]] ზემოთ იცმევდნენ.
+'''ტოგა''' ძველ რომში მამაკაცის ტრადიციული სამოსი. ტოგა იყო 6 მეტრის სიგრძის ოვალური ფორმის თეთრი შალის ნაჭერი, რომელსაც [[ტუნიკა|ტუნიკის]] ზემოთ იცმევდნენ. არამოქალაქეს არ ჰქონდა ტოგის ტარების უფლება.
+
+თავდაპირველად ტოგა უბრალოდ შალის მოსასხამი იყო, შემდეგ მოსასხამმა ისე იცვალა ფორმა რომ ყოველდღიურად სატარებლად იგი უვარგისი გახდა და იგი გარდაიქმნა სადღესასწაულო, ცერემონიულ სამოსად. ოფიციალურ პირებს ([[მაგისტრუსები|მაგისტრუსებს]] და [[რომის სენატი|სენატორებს]]) ოფიციალურ და საჯარო ღონისძიებებზე აუცილებლად უნდა სცმოდათ ტოგა.
