*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -1,6 +1,7 @@
-[[სურათი:toga.png|thumb|ტოგა]]
+[[სურათი:togapura.jpg|thumb|ტოგა]]
 '''ტოგა''' ძველ რომში მამაკაცის ტრადიციული სამოსი. ტოგა იყო 6 მეტრის სიგრძის ოვალური ფორმის თეთრი შალის ნაჭერი, რომელსაც [[ტუნიკა|ტუნიკის]] ზემოთ იცმევდნენ. არამოქალაქეს არ ჰქონდა ტოგის ტარების უფლება.
 
 თავდაპირველად ტოგა უბრალოდ შალის მოსასხამი იყო, შემდეგ მოსასხამმა ისე იცვალა ფორმა რომ ყოველდღიურად სატარებლად იგი უვარგისი გახდა და იგი გარდაიქმნა სადღესასწაულო, ცერემონიულ სამოსად. ოფიციალურ პირებს ([[მაგისტრატუსები|მაგისტრატუსებს]] და [[რომის სენატი|სენატორებს]]) ოფიციალურ და საჯარო ღონისძიებებზე აუცილებლად უნდა სცმოდათ ტოგა. როდესაც [[რომის მოქალაქეობა|რომის მოქალაქის]] ვაჟი აღწევდა სრულწლოვან ასაკს, მას მაშინ პირველად აცმევდნენ ტოგას. რელიგიური ცერემონიების დროს ტოგას თავზეც იხურავდნენ.
 
+[[სურათი:Augustuspontifex.jpg|thumb|left|[[ოქტავიან ავგუსტუსი|ავგუსტუსს]] ტოგა თავზე აქვს გადაფარებული]]
 ტოგები სხვადასხვა სახის იყო და ყოველი სახის ტოგას თავისი დანიშნულება ჰქონდა.
