--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -4,4 +4,11 @@
 თავდაპირველად ტოგა უბრალოდ შალის მოსასხამი იყო, შემდეგ მოსასხამმა ისე იცვალა ფორმა რომ ყოველდღიურად სატარებლად იგი უვარგისი გახდა და იგი გარდაიქმნა სადღესასწაულო, ცერემონიულ სამოსად. ოფიციალურ პირებს ([[მაგისტრატუსები|მაგისტრატუსებს]] და [[რომის სენატი|სენატორებს]]) ოფიციალურ და საჯარო ღონისძიებებზე აუცილებლად უნდა სცმოდათ ტოგა. როდესაც [[რომის მოქალაქეობა|რომის მოქალაქის]] ვაჟი აღწევდა სრულწლოვან ასაკს, მას მაშინ პირველად აცმევდნენ ტოგას. რელიგიური ცერემონიების დროს ტოგას თავზეც იხურავდნენ.
 
 [[სურათი:Augustuspontifex.jpg|thumb|left|[[ოქტავიან ავგუსტუსი|ავგუსტუსს]] ტოგა თავზე აქვს გადაფარებული]]
-ტოგები სხვადასხვა სახის იყო და ყოველი სახის ტოგას თავისი დანიშნულება ჰქონდა.
+ტოგები სხვადასხვა სახის იყო და ყოველი სახის ტოგას თავისი დანიშნულება ჰქონდა:
+
+* toga virilis - თეთრი სადა ტოგა, რომელსაც მამაკაცი მოქალაქეები ატარებდნენ.
+* toga praetexta - თეთრი ტოგა ფართო მეწამული ფერის კანტით. მას ასტარებდნენ მაგისტრატუსები, ექს-მაგისტრატუსები, დიქტატორები, ზოგიერთი ქურუმები და ტრადიციი მიხედვით რომის მეფეები. [[რომის იმპერია|იმპერიის]] პერიოდში [[რომის იმპერატორი|იმპერატორი]] ანიჭებდა toga praetexta-ს ტარების უფლებას პატივისცემის ნიშნად.
+* toga pulla - მუქი ფერის ტოგა. ამას გლოვის დროს იცმევდნენ.
+* Toga picta - მეწამული ტოგა ოქროსფერი კაანტით. ამას მხედართმთავრები ტრიუმალური მსვლელობისას იცმევდნენ. მოგვიანებით მას იმპერატორები იცმევდნენ ოფიციალურ ღონისძიებებზე.
+* toga candida - ხელოვნურად გათეთრებული ტოგა. ამას მაგისტრატუსობის კანდიდატები ატარებდნენ. 
+* Toga trabea- ასეთი ტოგები სამი ტიპის იყო, მხოლოდ მეწამული - ღმერთებისთვის, ვიწრო თეთრი ზოლით მეფეებისთვის და თეთრი ზოლებით [[მარსი (ღმერთი)|მარსის ქურუმებისთვის და [[ავური|ავურებისთვის]].
