*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -12,3 +12,11 @@
 * Toga picta - მეწამული ტოგა ოქროსფერი კაანტით. ამას მხედართმთავრები ტრიუმალური მსვლელობისას იცმევდნენ. მოგვიანებით მას იმპერატორები იცმევდნენ ოფიციალურ ღონისძიებებზე.
 * toga candida - ხელოვნურად გათეთრებული ტოგა. ამას მაგისტრატუსობის კანდიდატები ატარებდნენ. 
 * Toga trabea- ასეთი ტოგები სამი ტიპის იყო, მხოლოდ მეწამული - ღმერთებისთვის, ვიწრო თეთრი ზოლით მეფეებისთვის და თეთრი ზოლებით [[მარსი (ღმერთი)|მარსის ქურუმებისთვის და [[ავური|ავურებისთვის]].
+
+
+<gallery>
+ სურათი:Toga3.jpg|''ძვ. წ. I საუკუნის დასაწყისის ტოგა''
+ სურათი:Togapura.jpg|''[[toga virilis]]''
+ სურათი:Togapraetexta.jpg|''[[toga praetexta]]''
+ სურათი:Tunic senator.gif|''[[tunica clava]]''
+ </gallery>
