*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -16,7 +16,8 @@
 
 <gallery>
  სურათი:Toga3.jpg|''ძვ. წ. I საუკუნის დასაწყისის ტოგა''
- სურათი:Togapura.jpg|''[[toga virilis]]''
- სურათი:Togapraetexta.jpg|''[[toga praetexta]]''
- სურათი:Tunic senator.gif|''[[tunica clava]]''
+ სურათი:Togapura.jpg|''toga virilis''
+ სურათი:Togapraetexta.jpg|''toga praetexta''
+ სურათი:Toga1.jpg|''ახ. წ. I საუკუნე, სენატორი ტოგაში''
+ სურათი:Compitaliafresco.jpg|''რომაელი კაცები togae praetextae-ში. ფრესკა პომპეუსიდან''
  </gallery>
