*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -1,4 +1,4 @@
-[[სურათი:togapura.jpg|thumb|ტოგა]]
+[[სურათი:Compitaliafresco.jpg|thumb|რომაელი კაცები togae praetextae-ში. ფრესკა პომპეუსიდან]]
 '''ტოგა''' ძველ რომში მამაკაცის ტრადიციული სამოსი. ტოგა იყო 6 მეტრის სიგრძის ოვალური ფორმის თეთრი შალის ნაჭერი, რომელსაც [[ტუნიკა|ტუნიკის]] ზემოთ იცმევდნენ. არამოქალაქეს არ ჰქონდა ტოგის ტარების უფლება.
 
 თავდაპირველად ტოგა უბრალოდ შალის მოსასხამი იყო, შემდეგ მოსასხამმა ისე იცვალა ფორმა რომ ყოველდღიურად სატარებლად იგი უვარგისი გახდა და იგი გარდაიქმნა სადღესასწაულო, ცერემონიულ სამოსად. ოფიციალურ პირებს ([[მაგისტრატუსები|მაგისტრატუსებს]] და [[რომის სენატი|სენატორებს]]) ოფიციალურ და საჯარო ღონისძიებებზე აუცილებლად უნდა სცმოდათ ტოგა. როდესაც [[რომის მოქალაქეობა|რომის მოქალაქის]] ვაჟი აღწევდა სრულწლოვან ასაკს, მას მაშინ პირველად აცმევდნენ ტოგას. რელიგიური ცერემონიების დროს ტოგას თავზეც იხურავდნენ.
@@ -19,5 +19,10 @@
  სურათი:Togapura.jpg|''toga virilis''
  სურათი:Togapraetexta.jpg|''toga praetexta''
  სურათი:Toga1.jpg|''ახ. წ. I საუკუნე, სენატორი ტოგაში''
- სურათი:Compitaliafresco.jpg|''რომაელი კაცები togae praetextae-ში. ფრესკა პომპეუსიდან''
  </gallery>
+
+==რესურსები ინტერნეტში==
+* http://www.vroma.org/~bmcmanus/clothing.html
+
+[[კატეგორია:ძველი რომის ყოფაცხოვრება]]
+[[კატეგორია:ძველი რომი]]
