--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -68,12 +68,12 @@
 
 ===ჩაცმულობა===
 
-ყველა სენატორს უნდა ეტარებინა წოდების დამადასტურებლად ბეჭედი, თავდაოპირველად ეს ბეჭედი რკინის იყო, ხოლო გვიანდელი რესპუბლიკის დროს ოქროსი. მათ ტანსაცმელს tunica clava ერქვა, ეს იყო თეთრი [[ტუნიკა]] მარჯვენა მხარზე განიერი (13სმ) მეწამული ფერის ზოლით. senator pedarius ატარებდა თეთრ ტოგას (virilis). სენატორები, ვინც ამავდროულად მაგისტრატები იყვნენ, ატარებდნენ toga praetexta-ს თეთრ ტოგას ფართო მეწამული კანტით. ყველა სენატორს ეცვა ყავისფერი ტყავის ფეხსაცმელი.
+ყველა სენატორს უნდა ეტარებინა წოდების დამადასტურებლად ბეჭედი, თავდაოპირველად ეს ბეჭედი რკინის იყო, ხოლო გვიანდელი რესპუბლიკის დროს ოქროსი. მათ ტანსაცმელს tunica clava ერქვა, ეს იყო თეთრი [[ტუნიკა]] მარჯვენა მხარზე განიერი (13სმ) მეწამული ფერის ზოლით. senator pedarius ატარებდა თეთრ [[ტოგა|ტოგას]] (virilis). სენატორები, ვინც ამავდროულად მაგისტრატები იყვნენ, ატარებდნენ toga praetexta-ს თეთრ ტოგას ფართო მეწამული კანტით. ყველა სენატორს ეცვა ყავისფერი ტყავის ფეხსაცმელი.
 
 <gallery>
- სურათი:Togapura.jpg|''[[toga virilis]]''
- სურათი:Togapraetexta.jpg|''[[toga praetexta]]''
- სურათი:Tunic senator.gif|''[[tunica clava]]''
+ სურათი:Togapura.jpg|''toga virilis''
+ სურათი:Togapraetexta.jpg|''toga praetexta''
+ სურათი:Tunic senator.gif|''tunica clava''
  </gallery>
 
 [[კატეგორია:ძველი რომი]]
