/* რესპუბლიკის სახელმწიფო წყობა */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -5,7 +5,7 @@
 ==რესპუბლიკის სახელმწიფო წყობა==
 <small>''იხ:'' [[რომაელ კონსულთა სია]]</small>
 
-[[სურათი:Toga.png|thumb|200px|რომაელი მოქალაქის ტანსაცმელი - ტოგა. არამოქალაქეს ტოგის ტარების უფლება არ ჰქონდა]]
+[[სურათი:Toga.png|thumb|200px|რომაელი მოქალაქის ტანსაცმელი - [[ტოგა]]. არამოქალაქეს ტოგის ტარების უფლება არ ჰქონდა]]
 
 '''რომის რესპუბლიკა''' წარმოიქმნა [[ძვ. წ. 510]] წელს და იარსება სანამ არ გარდაიქმნა იმპერიად. 
 
