*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -26,3 +26,15 @@
 
 [[კატეგორია:ძველი რომის ყოფაცხოვრება]]
 [[კატეგორია:ძველი რომი]]
+
+[[da:Toga]]
+[[de:Toga]]
+[[en:Toga]]
+[[eo:Togo (vesto)]]
+[[gl:Toga]]
+[[he:טוגה]]
+[[la:Toga]]
+[[nl:Toga (kledingstuk)]]
+[[pl:Toga]]
+[[ru:Тога]]
+[[sv:Toga]]
