შესწორდა სურათის პრობლემა

--- a/მორიჰეი_უეშიბა.mw
+++ b/მორიჰეი_უეშიბა.mw
@@ -1,1 +1,2 @@
-მორიჰეი უეშიბა არის აიკიდოს ფუძემდებელი. [[სურათი:Morihei_Uesiba.jpg]]
+[[სურათი:Morihei_Uesiba.jpg|thumb|]]
+მორიჰეი უეშიბა არის აიკიდოს ფუძემდებელი.
