--- a/მორიჰეი_უეშიბა.mw
+++ b/მორიჰეი_უეშიბა.mw
@@ -1,2 +1,24 @@
 [[სურათი:Morihei_Uesiba.jpg|thumb|]]
-მორიჰეი უეშიბა არის აიკიდოს ფუძემდებელი.
+'''მორიჰეი უეშიბა''' არის აიკიდოს ფუძემდებელი.
+
+{{ესკიზი}}
+
+
+[[ar:موريهاي أيوشيبا]]
+[[bg:Морихей Уешиба]]
+[[ca:Morihei Ueshiba]]
+[[de:Morihei Ueshiba]]
+[[en:Morihei Ueshiba]]
+[[es:Morihei Ueshiba]]
+[[eo:UESHIBA Morihei]]
+[[fr:Morihei Ueshiba]]
+[[hu:Uesiba Morihei]]
+[[nl:Morihei Ueshiba]]
+[[ja:植芝盛平]]
+[[pl:Morihei Ueshiba]]
+[[pt:Morihei Ueshiba]]
+[[ro:Morihei Ueshiba]]
+[[ru:Уэсиба, Морихей]]
+[[sl:Morihei Ueshiba]]
+[[fi:Morihei Ueshiba]]
+[[sv:Morihei Ueshiba]]
