--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -206,11 +206,11 @@
 *'''არქიტექტურა''': ქალაქი-მუზეუმი მცხეთა, გელათის სამონასტრო კომპლექსი, თბილისის ისტორიული ცენტრი, უფლისციხის და ვარძიის კლდეში ნაკვეთი კომპლექსები, დავით გარეჯის და შიო მღვიმის კომპლექსები; ბაგრატის ტაძარი; ზემო სვანეთი; 
 *'''ლიტერატურა''': ქართული ეპოსი - [[ვეფხისტყაოსანი]] ([[შოთა რუსთაველი]], XIII ს.). 
 *'''თეატრი''': ფალიაშვილის სახ. ოპერისა და ბალეტის (თბილისი, 1851), რუსთაველის სახ. დრამატული (თბილისი, 1821), მარჯანიშვილის სახ. დრამატული (თბილისი, 1928). 
-*'''კულტურის თავისებურებები''': პოლიფონიური სიმღერა, ორიგინალური დამწერლობა. kaksksajdasd
+*'''კულტურის თავისებურებები''': პოლიფონიური სიმღერა, ორიგინალური დამწერლობა.
 
 ==შეიარაღებული ძალები==
 
-[[1998]] წლის მონაცემებით ქვეყნის [[შეიარაღებული ძალები|შეიარაღებულ ძალებში]] ირიცხებოდა 20000 მდე სამხედრო მოსამსახურე. [[სახმელეთო ჯარები]] (12600), [[სამხედრო-საჰაერო ძალები]] (3000), [[სამხედრო-საზღვაო ძალები]] (2000). რეზერვში ირიცხებოდა 250000 ადამიანი. შეიარაღებაში იმყოფებოდა 80-მდე [[ტანკი]], 111 საბრძოლო შეჯავშნული მანქანა, 100-ზე მეტი საველე არტილერიის ქვემეხი, ზალპური ცეცხლის რეაქტიული ჭურვი და [[ნაღმსატყორცნი]], 80-მდე საზენიტო რაკეტო  კომპლექსი, 17 [[თვითმფრინავი]] და [[შვეულმფრენი]], 22 [[საპატრულო კატარღა]] და მცირე ხომალდი. შეიარაღებული ძალების დაკომპლექტება ხდება შერეული პრინციპით–სავალდებულო [[სამხედრო სამსახური|სამხედრო სამსახურში]] გაწვევით და კონტრაქტის საფუძველზე. 2005 წელს საქართველოს თავდაცვის სამინისტროს ბიუჯეტიდან გამოეყო დაახლოებით 550 მლნ. ლარი. neta sad cavida chemi naceri? e, administratoro, girchev programas gadaxedo da es uazroba gamoascoro. ratom madzlev redaqtirebis sashualebas?
+[[1998]] წლის მონაცემებით ქვეყნის [[შეიარაღებული ძალები|შეიარაღებულ ძალებში]] ირიცხებოდა 20000 მდე სამხედრო მოსამსახურე. [[სახმელეთო ჯარები]] (12600), [[სამხედრო-საჰაერო ძალები]] (3000), [[სამხედრო-საზღვაო ძალები]] (2000). რეზერვში ირიცხებოდა 250000 ადამიანი. შეიარაღებაში იმყოფებოდა 80-მდე [[ტანკი]], 111 საბრძოლო შეჯავშნული მანქანა, 100-ზე მეტი საველე არტილერიის ქვემეხი, ზალპური ცეცხლის რეაქტიული ჭურვი და [[ნაღმსატყორცნი]], 80-მდე საზენიტო რაკეტო  კომპლექსი, 17 [[თვითმფრინავი]] და [[შვეულმფრენი]], 22 [[საპატრულო კატარღა]] და მცირე ხომალდი. შეიარაღებული ძალების დაკომპლექტება ხდება შერეული პრინციპით–სავალდებულო [[სამხედრო სამსახური|სამხედრო სამსახურში]] გაწვევით და კონტრაქტის საფუძველზე. 2005 წელს საქართველოს თავდაცვის სამინისტროს ბიუჯეტიდან გამოეყო დაახლოებით 550 მლნ. ლარი.
 
 == ქართული რესურსები ინტერნეტში==
 *[http://www.nplg.gov.ge/ic/library_e/gabeskiria/ საქართველოს ისტორია ეროვნული საპარლამენტო ბიბლიოთეკიდან]
