--- a/ზოროასტრიზმი.mw
+++ b/ზოროასტრიზმი.mw
@@ -15,7 +15,7 @@
 ===იხილეთ აგრეთვე===
 [[ზოროასტრიზმი საქართველოში]]
 [[კატეგორია:რელიგიები]]
-
+{{Link FA|pl}}
 [[af:Zoroastrisme]]
 [[ar:زردشتية]]
 [[ca:Zoroastrisme]]
