*Empty MediaWiki Message*

--- a/პინკ_ფლოიდი.mw
+++ b/პინკ_ფლოიდი.mw
@@ -8,7 +8,7 @@
 
 '''1966-1968'''
 
-სიდ ბარეტი - გიტარა, ვოკალი; როჯერ უოტერსი - ბას-გიტარა; რიჩარდ რაიტი - კლავიშები, ვოკალი; ნიკ მეისონი -დასარტყამები, პერკუსია; დევიდ გილმორი - გიტარა, ვოკალი (მიიღო მონაწილეობა ალბომის [[''იდუმალებით მოცული ლანგარი'']] ჩაწერაში)
+სიდ ბარეტი - გიტარა, ვოკალი; როჯერ უოტერსი - ბას-გიტარა; რიჩარდ რაიტი - კლავიშები, ვოკალი; ნიკ მეისონი -დასარტყამები, პერკუსია; დევიდ გილმორი - გიტარა, ვოკალი (მიიღო მონაწილეობა ალბომის [[იდუმალებით მოცული ლანგარი]] ჩაწერაში)
 
 '''1968 - 1983'''
 
