*Empty MediaWiki Message*

--- a/პინკ_ფლოიდი.mw
+++ b/პინკ_ფლოიდი.mw
@@ -87,7 +87,7 @@ Amused to death, რომელზეც ხუთი წელი მუშა
 
 ===გეგმები===
 
-[[სურათი:Onanisland.jpg|thumb|right|180px|"კუნძულზე", 2006]] დევიდ გილმორმა 2006 წლის  წლის 6 მარტს გამოუშვა თავისი მესამე (1984 წლის შემდეგ)სოლო-ალბომი სახელწოდებით [[კუნძული|კუნძულზე]] , რომლის ჩაწერაშიც მონაწილეობა მიიღეს რიჩარდ რაიტმა, პინკ ფლოიდის ერთ-ერთმა პირველმა გიტარისტმა ბობ (რადო) კლოუზმა, გაი პრეტმა (რომელიც მონაწილეობდა პინკ ფლოიდის უკანასკნელი ორი სტუდიური ალბომის ჩაწერაში და ორ უკანასკნელ მსოფლიო ტურში), დევიდ კროსბიმ და გრემ ნეშმა (ჯგუფი *კროსბი, სტილსი და ნეში*), პოლ ვიქს ვიკენსი (კლავიშები) პოლ მაკარტნის ჯგუფიდან, ჯედ ლინჩი (დასარტყამები) პიტერ გებრიელის ჯგუფიდან და სხვა ცნობილმა მუსიკოსებმა.
+[[სურათი:Onanisland.jpg|thumb|right|180px|"კუნძულზე", 2006]] დევიდ გილმორმა 2006 წლის  წლის 6 მარტს გამოუშვა თავისი მესამე (1984 წლის შემდეგ)სოლო-ალბომი სახელწოდებით [[კუნძულზე|კუნძული]] , რომლის ჩაწერაშიც მონაწილეობა მიიღეს რიჩარდ რაიტმა, პინკ ფლოიდის ერთ-ერთმა პირველმა გიტარისტმა ბობ (რადო) კლოუზმა, გაი პრეტმა (რომელიც მონაწილეობდა პინკ ფლოიდის უკანასკნელი ორი სტუდიური ალბომის ჩაწერაში და ორ უკანასკნელ მსოფლიო ტურში), დევიდ კროსბიმ და გრემ ნეშმა (ჯგუფი *კროსბი, სტილსი და ნეში*), პოლ ვიქს ვიკენსი (კლავიშები) პოლ მაკარტნის ჯგუფიდან, ჯედ ლინჩი (დასარტყამები) პიტერ გებრიელის ჯგუფიდან და სხვა ცნობილმა მუსიკოსებმა.
 
 რაც შეეხება როჯერ უოტერსს, იგი ამზადებს ორ ალბომს.ერთი, როგორც იგი აცხადებს, სიყვარულზეა, მეორე განაგრძობს ალბომში Amused to death წამოჭრილი თემების მიმოხილვას.2006 წლის ზაფხულისათვის ასევე დაგეგმილია როჯერის სოლო-კონცერტები, რომლებზეც იგი პირველად თავისი სოლო-კარიერის მანძილზე შეასრულებს ალბომს ''მთვარის ბნელი მხარე'' სრული სახით.კონცერტებზე მას შეურთდება ნიკ მეისონიც.
 
