*Empty MediaWiki Message*

--- a/პინკ_ფლოიდი.mw
+++ b/პინკ_ფლოიდი.mw
@@ -1,6 +1,6 @@
 [[სურათი:300px-PinkFloydAllThe5.jpg|thumb|right|300px|ჯგუფის წევრები]] 
 
-'''პინკ ფლოიდი''' (ჩამოყალიბდა 1965 წელს [[კემბრიჯი|კემბრიჯში]], ინგლისი) ბრიტანული როკ-ჯგუფია, ცნობილი პროგრესიული კომპოზიციებით, ფილოსოფიური ლირიკით, მუსიკალური ექსპერიმენტებით, ალბომების ყდებით და გამაოგნებელი ფერადი შოუ-კონცერტებით.მათ დიდი წარმატება ხვდა წილად [[1960]]-იან წლებში, ჯგუფის ლიდერთან, სიდ ბარეტთან ერთად.ბარეტის შეშლილობის შემდეგ ჯგუფში მოვიდა დევიდ გილმორი (რომელმაც შეცვალა ბარეტი), ჯგუფმა ჩაწერა წარმატებული კონცეფტუალური ალბომები, მიაღწია დიდ წარმატებას 1973 წლის ალბომით ''მთვარის ბნელი მხარე'' და [[1979]] წლის ალბომით ''კედელი''.[[1985]] წელს მისი ლიდერი, როჯერ უოტერსი, ოფიციალურად წავიდა ჯგუფიდან, მაგრამ დანარჩენმა წევრებმა გადაწყვიტეს, გაეგრძელებინათ პინკ ფლოიდის სახელით გამოსვლა და ჩაწერა.2005 წლის 2 ივლისს ჯგუფი გამოვიდა ლონდონის ჰაიდ-პარკში, ისევ როჯერ უოტერსთან ერთად, რითაც ბოლო მოუღო 24 წლიან კამათს ყოფილ კოლეგასთან.
+'''პინკ ფლოიდი''' (ჩამოყალიბდა 1965 წელს [[კემბრიჯი|კემბრიჯში]], ინგლისი) ბრიტანული როკ-ჯგუფია, ცნობილი პროგრესიული კომპოზიციებით, ფილოსოფიური ლირიკით, მუსიკალური ექსპერიმენტებით, ალბომების ყდებით და გამაოგნებელი ფერადი შოუ-კონცერტებით. მათ დიდი წარმატება ხვდა წილად [[1960]]-იან წლებში, ჯგუფის ლიდერთან, სიდ ბარეტთან ერთად. ბარეტის შეშლილობის შემდეგ ჯგუფში მოვიდა დევიდ გილმორი (რომელმაც შეცვალა ბარეტი), ჯგუფმა ჩაწერა წარმატებული კონცეფტუალური ალბომები, მიაღწია დიდ წარმატებას 1973 წლის ალბომით ''მთვარის ბნელი მხარე'' და [[1979]] წლის ალბომით ''კედელი''. [[1985]] წელს მისი ლიდერი, როჯერ უოტერსი, ოფიციალურად წავიდა ჯგუფიდან, მაგრამ დანარჩენმა წევრებმა გადაწყვიტეს, გაეგრძელებინათ პინკ ფლოიდის სახელით გამოსვლა და ჩაწერა. 2005 წლის 2 ივლისს ჯგუფი გამოვიდა ლონდონის ჰაიდ-პარკში, ისევ როჯერ უოტერსთან ერთად, რითაც ბოლო მოუღო 24 წლიან კამათს ყოფილ კოლეგასთან.
 
 ==შემადგენლობა==
 
@@ -36,9 +36,9 @@
 [[სურათი:PinkFloyd-album-atomheartmother.jpg|thumb|right|180px|"ატომგულის დედა", 1970]] 
 [[1970]] წელს ჯგუფმა კონცერტებზე წარადგინა უცნაური პიესა, რომელსაც "Epic" შეარქვა. მოგვიანებით, სტუდიაში მისი დასრულების შემდეგ, ჯგუფმა სრული სახით გამოიტანა იგი კონცერტებზე, უკვე ორკესტრთან და გუნდთან ერთად (გუნდი მანამდე ერთხელ [[1968]] წლის ალბომზე იქნა გამოყენებული). ნამუშევარს უწოდეს "ატომგულის დედა" სრულიად შემთხვევით - როჯერის ინიციატივით, რომელმაც [[ჯიზინი, რონ|რონ ჯიზინის]] (რომელიც ასევე მუშაობდა ალბომზე) მითითებით ჩაიხედა გაზეთში და ეს ფრაზა გამოიყენა - მოგვიანებით გამოსულ ამავე სახელწოდების ალბომის ყდაზე გამოსახული ძროხა არავითარ კავშირში არ არის ამ ნომერთან.
 
-დამატებითი შემოსავლის მიზნით ხმისჩამწერმა ფირმამ გამოუშვა კრებული ''რელიქვიები''. დისკი ''მედლი'', რომელიც 1971 წელს გამოიცა, შეიცავს ცნობილ პიესას Echoes - ეს მონუმენტური ჰანგები 20 წუთზე მეტი ჟღერს. ბევრი მას ჯგუფის საუკეთესო ნომრად მიიჩნევს. 
+დამატებითი შემოსავლის მიზნით ხმისჩამწერმა ფირმამ გამოუშვა კრებული ''რელიქვიები''. დისკი ''მედლი'', რომელიც [[1971]] წელს გამოიცა, შეიცავს ცნობილ პიესას Echoes - ეს მონუმენტური ჰანგები 20 წუთზე მეტი ჟღერს. ბევრი მას ჯგუფის საუკეთესო ნომრად მიიჩნევს. 
 
-შემდეგ ფილმ La Vallee-ს (1972) საუნდტრეკი იყო - ფილმის რეჟისორი ისევ ბარბეტ შრედერი გახლავთ. აქ იწყება პინკ ფლოიდის მესამე ეპოქა. 1972 წელს ჯგუფმა მუშაობა დაიწყო უოტერსის ახალ იდეებზე და პარალელურად, მონაწილეობა ფილმში, რომელიც მათ ეძღვნება. ფილმი "ცოცხლად პომპეიში" გვიჩვენებს ამ ოთხ ენერგიულ მუსიკოსს მათ ყველაზე პროდუქტიულ პერიოდში. ფილმში სრულდება უკვე ცნობილი ფსიქოდელიური პიესები და ნაჩვენებია, თუ როგორ მუშაობს ჯგუფი ახალ მასალაზე ალბომისათვის, რომელსაც ჯერ კიდევ არ ჰქონდა სახელწოდება.
+შემდეგ ფილმ La Vallee-ს (1972) საუნდტრეკი იყო - ფილმის რეჟისორი ისევ ბარბეტ შრედერი გახლავთ. აქ იწყება პინკ ფლოიდის მესამე ეპოქა. [[1972]] წელს ჯგუფმა მუშაობა დაიწყო უოტერსის ახალ იდეებზე და პარალელურად, მონაწილეობა ფილმში, რომელიც მათ ეძღვნება. ფილმი "ცოცხლად პომპეიში" გვიჩვენებს ამ ოთხ ენერგიულ მუსიკოსს მათ ყველაზე პროდუქტიულ პერიოდში. ფილმში სრულდება უკვე ცნობილი ფსიქოდელიური პიესები და ნაჩვენებია, თუ როგორ მუშაობს ჯგუფი ახალ მასალაზე ალბომისათვის, რომელსაც ჯერ კიდევ არ ჰქონდა სახელწოდება.
 
 [[სურათი:600px-Dsotm.jpg|thumb|right|180px|"მთვარის ბნელი მხარე", 1973]] იმავე წელს ჯგუფი Medicine head უშვებს დისკს Dark side of the moon, რომელიც ჩავარდება გაყიდვაში. რის შემდეგაც პინკ ფლოიდი მშვიდად არქმევს საკუთარ შედევრს იგივე სახელს - უოტერსის მიერ შემოთავაზებული ერთ-ერთი სიმღერის, Brain damage ტექსტის მიხედვით. ეს მუსიკალურად იდეალური და კონცეფტუალურად დაბალანსებული დისკი დღემდე რჩება მსოფლიოს საუკეთესო ალბომთა სიაში, ხოლო მისი ყდა, სტორმ ტორგესონის (ჯგუფის ყდების დიზაინერი) შედევრი, დღემდე როკ-მუსიკაში ყველაზე ცნობილია.
 ერთიანი ალბომით იმოგზაურეს მსოფლიოს გარშემო, შემდეგ კი, 1974 წლამდე, დატოვეს სტუდია.
@@ -79,17 +79,17 @@ Amused to death, რომელზეც ხუთი წელი მუშა
 
 ===დაუჯერებელი===
 
-2005 წლის გაზაფხულის ბოლოს გავრცელდა ხმები, თითქოს პინკ ფლოიდი აპირებს დროებით გაერთიანებას, მაგრამ ჯგუფის მენეჯმენტმა ისინი უარყო. ივნისის შუა რიცხვებში ცნობილი გახდა, რომ დევიდ გილმორმა სპეციალურად მოიწვია რაიტი, მეისონი და უოტერსი საქველმოქმედო კონცერტში Live 8 მონაწილეობის მისაღებად.2 ივლისს სწორედ იქ ოთხეული კვლავ ანათებდა და ერთად ასრულებდა ცნობილ სიმღერებს Money, Breathe, Wish you were here, Comfortably numb.
+2005 წლის გაზაფხულის ბოლოს გავრცელდა ხმები, თითქოს პინკ ფლოიდი აპირებს დროებით გაერთიანებას, მაგრამ ჯგუფის მენეჯმენტმა ისინი უარყო. ივნისის შუა რიცხვებში ცნობილი გახდა, რომ დევიდ გილმორმა სპეციალურად მოიწვია რაიტი, მეისონი და უოტერსი საქველმოქმედო კონცერტში Live 8 მონაწილეობის მისაღებად. 2 ივლისს სწორედ იქ ოთხეული კვლავ ანათებდა და ერთად ასრულებდა ცნობილ სიმღერებს Money, Breathe, Wish you were here, Comfortably numb.
 
 კონცერტისშემდგომი შემოქმედება იყო DVD Live 8 -ის გამოცემა, რომელიც შედგება 4 დისკისგან და რომლის მესამე დისკზეც შესულია ჯგუფის საკონცერტო გამოსვლა, ხოლო მეოთხეზე - რეპეტიცია და ინტერვიუები ოთხივე წევრთან.
 
-2005 წლის სექტემბერში როჯერ უოტერსმა, როგორც იქნა, დაასრულა თავის კლასიკურ ოპერაზე Ca Ira მუშაობა.16 ნოემბერს რომში გაიმართა ამ ოპერის პრემიერა.წინა დღეს კი პინკ ფლოიდი დაჯილდოვდა ლონდონის ალექსანდრა პალასში ბრიტანეთის მუსიკალური დარბაზის მიერ.დაჯილდოვებას დაესწრნენ მხოლოდ ნიკ მეისონი და დევიდ გილმორი - რიჩარდ რაიტი თვალის ოპერაციას იკეთებდა, როჯერ უოტერსს კი მეორე დღეს ოპერის პრემიერა ჰქონდა.მიუხედავად ამისა, ყველამ მიიღო პრიზები, რა თქმა უნდა, აღნიშნეს სიდ ბარეტის დამსახურებაც ჯგუფის ისტორიაში.
+2005 წლის სექტემბერში როჯერ უოტერსმა, როგორც იქნა, დაასრულა თავის კლასიკურ ოპერაზე Ca Ira მუშაობა. 16 ნოემბერს რომში გაიმართა ამ ოპერის პრემიერა. წინა დღეს კი პინკ ფლოიდი დაჯილდოვდა ლონდონის ალექსანდრა პალასში ბრიტანეთის მუსიკალური დარბაზის მიერ. დაჯილდოვებას დაესწრნენ მხოლოდ ნიკ მეისონი და დევიდ გილმორი - რიჩარდ რაიტი თვალის ოპერაციას იკეთებდა, როჯერ უოტერსს კი მეორე დღეს ოპერის პრემიერა ჰქონდა. მიუხედავად ამისა, ყველამ მიიღო პრიზები, რა თქმა უნდა, აღნიშნეს სიდ ბარეტის დამსახურებაც ჯგუფის ისტორიაში.
 
 ===გეგმები===
 
-[[სურათი:Onanisland.jpg|thumb|right|180px|"კუნძულზე", 2006]] დევიდ გილმორმა 2006 წლის  წლის 6 მარტს გამოუშვა თავისი მესამე (1984 წლის შემდეგ)სოლო-ალბომი სახელწოდებით [[კუნძულზე|კუნძული]] , რომლის ჩაწერაშიც მონაწილეობა მიიღეს რიჩარდ რაიტმა, პინკ ფლოიდის ერთ-ერთმა პირველმა გიტარისტმა ბობ (რადო) კლოუზმა, გაი პრეტმა (რომელიც მონაწილეობდა პინკ ფლოიდის უკანასკნელი ორი სტუდიური ალბომის ჩაწერაში და ორ უკანასკნელ მსოფლიო ტურში), დევიდ კროსბიმ და გრემ ნეშმა (ჯგუფი *კროსბი, სტილსი და ნეში*), პოლ ვიქს ვიკენსი (კლავიშები) პოლ მაკარტნის ჯგუფიდან, ჯედ ლინჩი (დასარტყამები) პიტერ გებრიელის ჯგუფიდან და სხვა ცნობილმა მუსიკოსებმა.
+[[სურათი:Onanisland.jpg|thumb|right|180px|"კუნძულზე", 2006]] დევიდ გილმორმა 2006 წლის  წლის 6 მარტს გამოუშვა თავისი მესამე (1984 წლის შემდეგ)სოლო-ალბომი სახელწოდებით [[კუნძული (ალბომი)|კუნძული]] , რომლის ჩაწერაშიც მონაწილეობა მიიღეს რიჩარდ რაიტმა, პინკ ფლოიდის ერთ-ერთმა პირველმა გიტარისტმა ბობ (რადო) კლოუზმა, გაი პრეტმა (რომელიც მონაწილეობდა პინკ ფლოიდის უკანასკნელი ორი სტუდიური ალბომის ჩაწერაში და ორ უკანასკნელ მსოფლიო ტურში), დევიდ კროსბიმ და გრემ ნეშმა (ჯგუფი *კროსბი, სტილსი და ნეში*), პოლ ვიქს ვიკენსი (კლავიშები) პოლ მაკარტნის ჯგუფიდან, ჯედ ლინჩი (დასარტყამები) პიტერ გებრიელის ჯგუფიდან და სხვა ცნობილმა მუსიკოსებმა.
 
-რაც შეეხება როჯერ უოტერსს, იგი ამზადებს ორ ალბომს.ერთი, როგორც იგი აცხადებს, სიყვარულზეა, მეორე განაგრძობს ალბომში Amused to death წამოჭრილი თემების მიმოხილვას.2006 წლის ზაფხულისათვის ასევე დაგეგმილია როჯერის სოლო-კონცერტები, რომლებზეც იგი პირველად თავისი სოლო-კარიერის მანძილზე შეასრულებს ალბომს ''მთვარის ბნელი მხარე'' სრული სახით.კონცერტებზე მას შეურთდება ნიკ მეისონიც.
+რაც შეეხება როჯერ უოტერსს, იგი ამზადებს ორ ალბომს. ერთი, როგორც იგი აცხადებს, სიყვარულზეა, მეორე განაგრძობს ალბომში Amused to death წამოჭრილი თემების მიმოხილვას. 2006 წლის ზაფხულისათვის ასევე დაგეგმილია როჯერის სოლო-კონცერტები, რომლებზეც იგი პირველად თავისი სოლო-კარიერის მანძილზე შეასრულებს ალბომს ''მთვარის ბნელი მხარე'' სრული სახით. კონცერტებზე მას შეურთდება ნიკ მეისონიც.
 
 ასევე ცნობილია, რომ რიკ რაიტიც ამზადებს თავის მესამე სოლო-ალბომს.
 
