*Empty MediaWiki Message*

--- a/გერმანიის_ფედერალური_მხარეები.mw
+++ b/გერმანიის_ფედერალური_მხარეები.mw
@@ -19,6 +19,7 @@
 
 [[als:Bundesland (Deutschland)]]
 [[ar:ولايات ألمانيا]]
+[[ca:Estat federal alemany]]
 [[da:Tysklands delstater]]
 [[de:Bundesland (Deutschland)]]
 [[en:States of Germany]]
