*Empty MediaWiki Message*

--- a/წალკის_მუნიციპალიტეტი.mw
+++ b/წალკის_მუნიციპალიტეტი.mw
@@ -28,7 +28,7 @@
 
 
 ==ღირშესანიშნაობანი==
-ბეშთაშენის წმ. გიორგის, არჯევან-სარვანის ღვთისმშობლის, აიაზმის, კუშჩის, წმ. გიორგის, წალკის ეკლესიები, გუმბათის ციხე-გალავანი და ეკლესია, ავრანლოს და სანთის ციხეები და სხვ.
+ბეშთაშენის წმ. გიორგის, არჯევან-სარვანის ღვთისმშობლის, [[აიაზმა|აიაზმის]], კუშჩის, წმ. გიორგის, წალკის ეკლესიები, გუმბათის ციხე-გალავანი და ეკლესია, ავრანლოს და სანთის ციხეები და სხვ.
 
 {{ქვემო ქართლი}}
 [[კატეგორია:საქართველოს რაიონები]]
