*Empty MediaWiki Message*

--- a/ბოლნისის_მუნიციპალიტეტი.mw
+++ b/ბოლნისის_მუნიციპალიტეტი.mw
@@ -28,7 +28,7 @@
 
 
 ==ღირშესანიშნაობანი==
-ბოლნისის  სიონი, აკაურთის ეკლესია, ქვემო ბოლნისის ბაზილიკა, აკვანება, წუღრუღაშენი, ქვეშის ციხე, ქოლაგირის ციხე.
+ბოლნისის  სიონი, [[აკაურთა (ეკლესია)|აკაურთის ეკლესია]], ქვემო ბოლნისის ბაზილიკა, [[აკვანება]], წუღრუღაშენი, ქვეშის ციხე, ქოლაგირის ციხე.
 
 
 {{ქვემო ქართლი}}
