*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -11,7 +11,7 @@
 * toga pulla - მუქი ფერის ტოგა. ამას გლოვის დროს იცმევდნენ.
 * Toga picta - მეწამული ტოგა ოქროსფერი კაანტით. ამას მხედართმთავრები ტრიუმალური მსვლელობისას იცმევდნენ. მოგვიანებით მას იმპერატორები იცმევდნენ ოფიციალურ ღონისძიებებზე.
 * toga candida - ხელოვნურად გათეთრებული ტოგა. ამას მაგისტრატუსობის კანდიდატები ატარებდნენ. 
-* Toga trabea- ასეთი ტოგები სამი ტიპის იყო, მხოლოდ მეწამული - ღმერთებისთვის, ვიწრო თეთრი ზოლით მეფეებისთვის და თეთრი ზოლებით [[მარსი (ღმერთი)|მარსის ქურუმებისთვის და [[ავური|ავურებისთვის]].
+* Toga trabea- ასეთი ტოგები სამი ტიპის იყო, მხოლოდ მეწამული - ღმერთებისთვის, ვიწრო თეთრი ზოლით მეფეებისთვის და თეთრი ზოლებით [[მარსი (ღმერთი)|მარსის]] ქურუმებისთვის და [[ავური|ავურებისთვის]].
 
 
 <gallery>
