*Empty MediaWiki Message*

--- a/საქართველოს_ისტორიული_სოფლები.mw
+++ b/საქართველოს_ისტორიული_სოფლები.mw
@@ -1,7 +1,7 @@
 [[საქართველო|საქართველოს]] [[სოფელი|სოფლები]], რომელთა სახელები დაკავშირებულია საქართველოს მნიშვნელოვან ისტორიულ, საზოგადოებრივ-პოლიტიკურ და კულტურულ მოვლენებთან (სია არასრულია):
 
 
-*[[აბელია]] - სოფელი ქვემო ქართლში (ახლანდ. აბელიანი, თეთრი წყაროს რაიონი). პირველად იხსენიება 1580 წლის ერთ საბუთში. XI - XV სს-ის სამეფო დომენი იყო. 
+*[[აბელია (სოფელი)]] - სოფელი ქვემო ქართლში (ახლანდ. აბელიანი, თეთრი წყაროს რაიონი). პირველად იხსენიება 1580 წლის ერთ საბუთში. XI - XV სს-ის სამეფო დომენი იყო. 
 *[[აბისი]] - სოფ. ქარელის რაიონში. აბისი პირველად იხსენიება 1633 წელს. ამ დროს ავალიშვილების სამკვიდრო მამული იყო. 
 *[[არჩეული ]] - სოფელი ლანჩხუთის რაიონში. ე.ნინოშვილის სახლ-მუზეუმი.  
 *[[ბეშთაშენი]] - (ისტ. ბეშქენაშენი) სოფელი წალკის რაიონში. მდ. აგრიჩის ნაპირას. აქ არის VII ს-ის ეკლესია. აღმოჩენილია ბრინჯაოს ხანის გორასამარხები. არის ციკლოპური ციხეც. 
