*Empty MediaWiki Message*

--- a/ბოდბე.mw
+++ b/ბოდბე.mw
@@ -1,4 +1,4 @@
 '''ბოდბე''', [[სიღნაღის რაიონი|სიღნაღის]] რაიონის სოფლების [[ზემო ბოდბე|ზემო ბოდბისა]] და  [[ქვემო ბოდბე|ქვემო ბოდბის]] ძველი სახელწოდება.
 
 
-[[კატეგორია:საქართველოს სოფლები]]
+[[კატეგორია:საქართველოს ისტორიული სოფლები]]
