*Empty MediaWiki Message*

--- a/იულიუს-კლავდიუსების_დინასტია.mw
+++ b/იულიუს-კლავდიუსების_დინასტია.mw
@@ -1,11 +1,11 @@
 იულიუსების გენეოლოგიური ხე
 
-[[სურათი:Iuliusebi.png]]
+[[სურათი:Iuliusebi.png|1000px]]
 
 
 კლავდიუსების გენეოლოგიური ხე
 
-[[სურათი:klavdiusebi.png]]
+[[სურათი:klavdiusebi.png|1000px]]
 
 წითელ ჩარჩოებში იმპერატორები არიან წარმოდგენილნი.
 
