*Empty MediaWiki Message*

--- a/ტრაპიზონის_იმპერატორთა_სია.mw
+++ b/ტრაპიზონის_იმპერატორთა_სია.mw
@@ -13,7 +13,7 @@
 * [[ალექსი II (ტრაპიზონი)|ალექსი II]] (1297-1330)
 * [[ანდრონიკე III (ტრაპიზონი)|ანდრონიკე III]] (1330-1332)
 * [[მანუელ II (ტრაპიზონი)|მანუელ II]] (1332)
-* [[ბასილი I (ტრაპიზონი )|ბასილი I]]Basilios Komnenos (1332-1340)
+* [[ბასილი I (ტრაპიზონი )|ბასილი I]](1332-1340)
 * [[ანა (ტრაპიზონი )|ანა ანახუტუ კომნენე]] (1341-1342)
 * [[იოანე III (ტრაპიზონი)|იოანე III]] (1342-1344)
 * [[მიხაელ I (ტრაპიზონი )| მიხაელ I]] (1344-1349)
