--- a/ფილიპიკოსი_(ბიზანტია).mw
+++ b/ფილიპიკოსი_(ბიზანტია).mw
@@ -1,3 +1,4 @@
+[[Image:Solidus-Philippicus-sb1447.3.jpg|thumb|250px|ფილიპიკოსის მონეტა]]
 '''ფილიპიკოს ბარდანესი''' - ბიზანტიის იმპერატორი [[711]]-[[713]] წლებში.
 
 
