--- a/ანასტასიოს_II_(ბიზანტია).mw
+++ b/ანასტასიოს_II_(ბიზანტია).mw
@@ -1,3 +1,4 @@
+[[Image:Solidus-Anastasius II-sb1463.jpg|thumb|300px|ანასტასიოსის მონეტა]] 
 '''ანასტასიოს II''' – [[ბიზანტიის იმპერია|ბიზანტიის]] იმპერატორი [[713]]-[[715]] წლებში. 
 
 
