--- a/ალექსანდრე_ყაზბეგი.mw
+++ b/ალექსანდრე_ყაზბეგი.mw
@@ -1,5 +1,5 @@
 [[image:Kasbeg.jpg|thumb|left|ყაზბეგი, ალექსანდრე]]
-'''ყაზბეგი, ალექსანდრე''' მიხეილის ძე (* [[2 იანვარი]], [[20 იანვარი]], [[1848]], სტეფანწმინდა, ახლანდელი დაბა ყაზბეგი  ― † [[19 დეკემბერი]], [[22 დეკემბერი]], [[1893]], [[თბილისი]], დაკრძალულია ყაზბეგში), [[ქართველები|ქართველი]] მწერალი. 
+'''ყაზბეგი, ალექსანდრე''' მიხეილის ძე (* [[2 იანვარი]], [[20 იანვარი]], [[1848]], სტეფანწმინდა  ― † [[19 დეკემბერი]], [[22 დეკემბერი]], [[1893]], [[თბილისი]], დაკრძალულია სტეფანწმინდაში), [[ქართველები|ქართველი]] მწერალი. 
 
 ==ბიოგრაფია==
 ალ. ყაზბეგი აღიზარდა სტეფანოწმინდაში, ხევის მმართველის მიხეილ გაბრიელის ძე ჩოფიკაშვილისა (ყაზბეგის) და ელისაბედ თარხნიშვილის ოჯახში. მშობლებმა მიაბარეს თბილისში ჯერ ჰაკეს ([[1859]]), შემდეგ კანონიჩის ([[1862]]) პანსიონში. [[1863]]-იდან სწავლობდა კლასიკურ გიმნაზიაში, [[1867]]-[[1870]] - [[მოსკოვი|მოსკოვის]] სამეურნეო აკადემიაში. სამშობლოში დაბრუნებულმა ხელი მიჰყო მქყემსობას, რამაც მისი ახლობლობის დიდი უკმაყოფილება გამოიწვია. [[1879]]-მდე მეცხვარედ იყო და ზედმიწევნით გაეცნო მოხევეთა ყოფას, გლეხი ხალხის სატკივარს, მეფის ხელისუფალთა და ხალხის ურთიერთობას (ეს პერიოდი ასახა მოთხრობაში "ნამწყემსარის მოგონებანი", [[1883]]). [[1879]]-იდან თბილისში ცხოვრობდა. 
