*Empty MediaWiki Message*

--- a/ნარინჯისფერი_რევოლუცია.mw
+++ b/ნარინჯისფერი_რევოლუცია.mw
@@ -22,6 +22,7 @@
 [[nl:Oranje Revolutie]]
 [[no:Presidentvalget i Ukraina 2004]]
 [[pl:Pomarańczowa rewolucja na Ukrainie]]
+[[pt:Revolução Laranja]]
 [[ro:Revoluţia Portocalie]]
 [[ru:Оранжевая революция]]
 [[uk:Помаранчева революція]]
