*Empty MediaWiki Message*

--- a/ანანურის_ციხე.mw
+++ b/ანანურის_ციხე.mw
@@ -1,3 +1,5 @@
+[[სურათი:Ananuri12400.jpg|thumb|1892]]
+[[სურათი:Ananuri2400.jpg|thumb|1995]]
 '''ანანური''', ფეოდალური ხანის (XVI-XVII სს.) ციხესიმაგრეა. იგი ჩრდილოეთიდან დარიალის ხეობით მომავალ გზას კეტავდა და არაგვის ერისთავთა რეზიდენცია იყო. [[1743]] წელს კახეთის მეფე [[თეიმურაზ II|თეიმურაზ II-მ]] გააუქმა [[არაგვის საერისთავო]] და ანანურის ციხე მეფის ხელისუფლებას დაუქვემდებარა. XVIII საუკუნის II ნახევარში საქართველო რუსეთის ეკონომიკური გაძლიერების შედეგად ანანური ქალაქად იქცა, 1803-1821 წლებში მაზრის ცენტრი იყო.
 
 ანანურის ანსამბლში თავმოყრილია საერო, სამხედრო და საკულტო ნაგებობანი. ანსამბლი შედგება ციტადელისა და ქვედა ციხისაგან. თავდაპირველად აქ მდგარა ამჟამად ციტადელის ცენტრში მოქცეული ხუთსართულიანი კოშკი (XIV-XV სს.). ციტადელის აღმოსავლეთით დგას მცირე ზომის ერთნავიანი ეკლესია (XVI-XVII სს.), რომელსაც ადგილობრივი მცხოვრებნი "მკურნალს" ეძახიან. დაახლოებით XVII საუკუნის შუა ხანას ეკუთვნის მცირე გუმბათიანი ტაძარი (ღვთაება).
