*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_მ.mw
+++ b/ცნობილი_ქართველები:_მ.mw
@@ -71,8 +71,8 @@
 * [[მარგიანი, რევაზ]] - პოეტი
 * [[მარგიევი, დუდარ]] - კინოოპერატორი
 * [[მარდალეიშვილი, პავლე]] - რევოლუციური მოძრაობის მოღვაწე საქართველოში
-* [[მარიამი, საქართველოს მეფის გიორგი I-ის მეუღლე]] - პოლიტიკური მოღვაწე
-* [[მარიამი, ქართლის დედოფალი]] - ქართული კულტურის მოღვაწე
+* [[მარიამი (საქართველოს მეფის გიორგი I-ის მეუღლე)]] - პოლიტიკური მოღვაწე
+* [[მარიამი (ქართლის დედოფალი)]] - ქართული კულტურის მოღვაწე
 * [[მარიამ-მაკრინა]] - პოეტი
 * [[მარიჯანი]] - პოეტი
 * [[მარკოზაშვილი, თეიმურაზ]] - არქიტექტორი
