*Empty MediaWiki Message*

--- a/ზაქარია.mw
+++ b/ზაქარია.mw
@@ -1,9 +1,11 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი ''' ზაქარია''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
 * [[ზაქარია (ჯორჯაძე)]] - საქართველოს კათოლიკოს-პატრიარქი
 * [[ზაქარია (ქვარიანი)]] - დასავლეთ საქართველოს კათოლიკოს-პატრიარქი
-* [[ზაქარია, XVII-XVIII სს.]] - გარეჯის დოდოს მონასტრის წინამძღვარი
+* [[ზაქარია (XVII-XVIII სს.)]] - გარეჯის დოდოს მონასტრის წინამძღვარი
 * [[ზაქარია (პაპი)]] - [[რომის პაპი]] [[741]]-[[752]] წ.წ.
+
+
+
+{{მრავალმნიშვნელოვანი}}
