*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ზ.mw
+++ b/ცნობილი_ქართველები:_ზ.mw
@@ -19,7 +19,7 @@
 * [[ზაქარაია, პარმენ]] - ხელოვნებათმცოდნე
 * [[ზაქარია (ჯორჯაძე)]] - საქართველოს კათალიკოს-პატრიარქი
 * [[ზაქარია (ქვარიანი)]] - დასავლეთ საქართველოს კატალიკოს-პატრიარქი
-* [[ზაქარია]] - გარეჯის დოდოს მონასტრის წინამძღვარი
+* [[ზაქარია (XVII-XVIII სს.)]] - გარეჯის დოდოს მონასტრის წინამძღვარი
 * [[ზაქარიაძე, ბუხუტი]] - მსახიობი
 * [[ზაქარიაძე, სერგო]] - მსახიობი
 
