*Empty MediaWiki Message*

--- a/ზაჰესი_(დაბა).mw
+++ b/ზაჰესი_(დაბა).mw
@@ -1,7 +1,8 @@
 {|border=0 cellpadding=10 width=100%
-|- bgcolor=silver
-|ტერმინს '''ზაჰესი''' აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ზაჰესი]]
-|}
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ზაჰესი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ზაჰესი]]
+|}</small>
+
 
 
 '''ზაჰესი'''  - [[დაბა]] (მუშათა დასახლება) [[მცხეთის რაიონი|მცხეთის რაიონში]]. მდებარეობს მდინარე [[მტკვარი|მტკვრის]] მარცხენა ნაპირზე (ზღვის დონიდან 450 მ, [[მცხეთა|მცხეთიდან]] 6 კმ, [[თბილისი|თბილისიდან]] 20 კმ). აქ მდებარეობს [[ზემო-ავჭალის ჰიდროელექტროსადგური]], სხვადასხვა მცირე საწარმოები. მოსახლეობა 5.3 ათასი (2002).
