--- a/ფსიქოანალიზი.mw
+++ b/ფსიქოანალიზი.mw
@@ -1,5 +1,5 @@
 {{სტილი}}
-ფსიქოანალიზის ავტორია სიღრმის ფსიქოლოგიის ფუძემდებელი [[ფროიდი, ზიგმუნდ|ზიგმუნდ ფროიდი]]. ფროიდი დაიბადა პატარა ქალაქ [[ფრაიბერგი|ფრაიბერგში]], ხოლო განათლება [[ვენის უნივერსიტეტი|ვენის უნივერსიტეტში]] მიიღო. ფროიდმა [[ბროიერი, იოზეფ|იოზეფ ბროიერისგან]] შეიტყო სიტყვით მკურნალობის ფსიქიატრიული მეთოდის შესახებ, რაც ძალზე მნიშვნელოვანი გახდა ფსიქოანალიზისთვის.
+ფსიქოანალიზის ავტორია სიღრმის ფსიქოლოგიის ფუძემდებელი [[ფროიდი, ზიგმუნდ|ზიგმუნდ ფროიდი]]. ფროიდი დაიბადა პატარა ქალაქ [[ფრაიბერგი|ფრაიბერგში]], ხოლო განათლება [[ვენის უნივერსიტეტი|ვენის უნივერსიტეტში]] მიიღო. ფროიდმა, [[ბროიერი, იოზეფ|იოზეფ ბროიერისგან]] შეიტყო სიტყვით მკურნალობის ფსიქიატრიული მეთოდის შესახებ, რაც ძალზე მნიშვნელოვანი გახდა ფსიქოანალიზისთვის.
 
     
 ლექციების კურსის შესავალი ფსიქოანალიზში მათთვის ვინ პირველად ეცნობა მას
