--- a/ნიუ-ჯერსი.mw
+++ b/ნიუ-ჯერსი.mw
@@ -1,4 +1,4 @@
-[[Image: New Jersey state flag.png|120px|right]]
+[[Image:Flag of New Jersey.svg|120px|right]]
 [[Image:Map of USA highlighting New Jersey.png|120px|right]]
 
 '''ნიუ-ჯერსი''' (New Jersey, Nj), შტატი [[აშშ]]-ში, მდებარეობს შუა ატლანტიკურ რეგიონში. სახელი – ეწოდა კუნძულ [[ჯერსი|ჯერსის]] დაცვის სახსოვრად.  ნიუ-ჯერსი 1605 წელს კოლონიზებულ იქნა [[ნიდერლანდელები|ჰოლანდიელთა]] მიერ (ახალი ჰოლანდია), 1664 წელს გადაეცა [[ინგლისი|ინგლისს]], 1787-დან [[აშშ]]-ს შტატია.
