--- a/მსოფლიოს_ქვეყნები_მოსახლეობის_მიხედვით_(2005).mw
+++ b/მსოფლიოს_ქვეყნები_მოსახლეობის_მიხედვით_(2005).mw
@@ -1,3 +1,4 @@
+[[Image:World population.PNG|thumb]]
 ეს არის სუვერენული სახელმწიფოებისა და სხვა ტერიტორიების სია მოსახლეობის რაოდენობის მიხედვით. რიგითი ნომრები მითითებული აქვთ მხოლოდ სუვერენულ სახელმწიფოებს, სხვა ტერიტორიები სიაში ჩართულია შედარებისათვის. მონაცემები ასახავს 2005 წლის მდგომარეობას.
 
 
