*Empty MediaWiki Message*

--- a/გიორგი_III_(საქართველოს_მეფე).mw
+++ b/გიორგი_III_(საქართველოს_მეფე).mw
@@ -21,7 +21,7 @@
 {| align="center" cellpadding="2" border="2"
 |-
 | width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[დემეტრე I]]'''
-| width="40%" align="center" | '''[[ქართველ მეფეთა სია|საქართველოს მეფე]]'''
+| width="40%" align="center" | '''[[ერთიანი საქართველოს მეფეები|საქართველოს მეფეები]]'''
 | width="30%" align="center" | ტახტის მემკვიდრე:<br>'''[[თამარი]]'''
 |}
 
