--- a/თამარ_მეფე.mw
+++ b/თამარ_მეფე.mw
@@ -4,7 +4,7 @@
 |}</small>
 
 [[სურათი:QueenTamar Vardziafresco.jpg|thumb|თამარი გამოსახული ვარძიის მონასტრის ერთ-ერთ ფრესკაზე]]
-'''თამარი''', '''თამარ მეფე''' (დაახ. *[[1160]] - [[1213]], შესაძლოა [[1210]] ან [[1207]]), [[საქართველო|საქართველოს]] [[მონარქი]] [[1184]] წლიდან, [[გიორგი III|გიორგი III-ის]] ასული, [[ბაგრატიონი (დინასტია)|ბაგრატიონთა]] გვარის ჩამომავალი. თამარს საქართველოს ოქროს ხანაში მოუწია მეფობა და უაღრესად წარმატებული მმართველის რეპუტაციით სარგებლობდა, რისთვისაც მას ქვეშევრდომებმა "მეფეთ მეფე და დედოფალთ დედოფალი აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანთა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა, დიდება ამა სამყაროსა და სარწმუნოებისა, მესიის მოვლენილი" შეარქვეს.
+'''თამარი''', '''თამარ მეფე''' (* დაახ. [[1160]] - [[1213]], შესაძლოა [[1210]] ან [[1207]]), [[საქართველო|საქართველოს]] [[მონარქი]] [[1184]] წლიდან, [[გიორგი III|გიორგი III-ის]] ასული, [[ბაგრატიონი (დინასტია)|ბაგრატიონთა]] გვარის ჩამომავალი. თამარს საქართველოს ოქროს ხანაში მოუწია მეფობა და უაღრესად წარმატებული მმართველის რეპუტაციით სარგებლობდა, რისთვისაც მას ქვეშევრდომებმა "მეფეთ მეფე და დედოფალთ დედოფალი აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანთა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა, დიდება ამა სამყაროსა და სარწმუნოებისა, მესიის მოვლენილი" შეარქვეს.
 
 ==ცხოვრება==
 [[image:Tamar fresco at Betania Monastery, Georgia.jpg|thumb|left|თამარი ბეთანიის მონასტრის ფრესკაზე]]
@@ -34,7 +34,7 @@
 {| align="center" cellpadding="2" border="2"
 |-
 | width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[გიორგი III, საქართველოს მეფე |გიორგი III]]'''
-| width="40%" align="center" | '''[[საქართველოს მეფეთა სია|საქართველოს მეფე]]'''
+| width="40%" align="center" | '''[[ერთიანი საქართველოს მეფეები|საქართველოს მეფეები]]'''
 | width="30%" align="center" | ტახტის მემკვიდრე:<br>'''[[გიორგი IV ლაშა|ლაშა-გიორგი]]'''
 |}
 
