--- a/დავით_IV_აღმაშენებელი.mw
+++ b/დავით_IV_აღმაშენებელი.mw
@@ -41,7 +41,7 @@
 
 {| align="center" cellpadding="2" border="2"
 |-
-| width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[გიორგი II]]'''
+| width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[გიორგი II, საქართველოს მეფე|გიორგი II]]'''
 | width="40%" align="center" | '''[[ერთიანი საქართველოს მეფეები|საქართველოს მეფეები]]''' [[1089]]-[[1125]]
 | width="30%" align="center" | ტახტის მემკვიდრე:<br>'''[[დემეტრე I]]'''
 |}
