*Empty MediaWiki Message*

--- a/არმაზი.mw
+++ b/არმაზი.mw
@@ -1,1 +1,11 @@
-#REDIRECT [[არმაზი (ღვთაება)]]
+საკუთარი სახელი '''არმაზი''' შეიძლება აღნიშნავდეს:
+
+
+* [[არმაზი (ღვთაება)|არმაზი]] - ქართული უზენაესი წარმართული ღვთაება
+* [[არმაზი (მცხეთა) |არმაზი]] - ძველი ქართული ხუროთმოძღვრების ძეგლი მცხეთასთან
+* [[არმაზი (ქსანი)| არმაზი]] - ძველი ქართული ხუროთმოძღვრების ძეგლი ქსნის ხეობაში
+* [[არმაზი (სოფელი)|არმაზი]] - სოფელი ახალგორის რაიონში
+* [[არმაზი (გაზეთი)| არმაზი]] - ქუთაისის ხელოვან მწერალთა წრის გაზეთი 
+
+
+{{მრავალმნიშვნელოვანი}}
