--- a/არმაზის_ციხე.mw
+++ b/არმაზის_ციხე.mw
@@ -1,3 +1,5 @@
+[[სურათი:Bazilikamaxi.jpg|thumb|არმაზი მცხეთისა. სამრეკლო. XVI-XVII სს.]]
+[[სურათი:Armazimaxi.jpg|thumb]]
 '''არმაზი''' მცხეთისა, ძველი ქართული ხუროთმოძღვრების ძეგლი. სამონასტრო კომპლექსი მცხეთიდან 1,5 კმ-ზე, არმაზისხევში. მთავარი ნაგებობაა დარბაზული ეკლესიაა, რომელმაც ჩვენამდე ნანგრევების სახით მოაღწია. ეკვდერის კარისთავის ასომთავრული წარწერის მიხედვით (დაცულია საქართველოს ისტორიის მუზეუმში), ეკლესია აშენებულია 1150-1178 წლებს შორის, დასავლეთიდან მას ეკვრის შეისრულთაღიანი კარიბჭე, ჩრდილოეთ მხარეს ეკვდერი და მცირე ზომის საძვალის მსგავსი სადგომია. კომპლექსი ნაგებია აგურითა და ნატეხი ქვით. ეკლესიასა და კარიბჭეში შემორჩენილია XII საუკუნის კედლის მხატვრობის ფრაგმენტები. ეკლესიის დასავლეთით მდებარე სამრეკლო XVI-XVII საუკუნეებს განეკუთვნება. აქვეა შუა საუკუნეების გალავნისა და სენაკების ნანგრევები.
 
 
