--- a/20_აპრილი.mw
+++ b/20_აპრილი.mw
@@ -3,7 +3,7 @@
 
 ==დღის მოვლენები==
 
-*[[1770]] : [[ასპინძის ბრძოლა]]. [[ერეკლე II|ერეკლე II–მ]] დაამარცხა ოსმალურ-ლეკური ჯარი
+*[[1770]] : [[ასპინძის ბრძოლა 1770|ასპინძის ბრძოლა]]. [[ერეკლე II|ერეკლე II–მ]] დაამარცხა ოსმალურ-ლეკური ჯარი
 *[[1804]] : ხელი მოეწერა ელაზნაურის ტრაქტატს, რომლითაც [[იმერეთის სამეფო|იმერეთის სამეფომ]] მიიღო [[რუსეთი|რუსეთის]] ქვეშევრდომობა
 *[[1877]] : ქართველებმა და რუსეთმა აიღეს ბაიაზეთი
 *[[1921]] : სამმხრივი შეთანხმება [[ამიერკავკასია|ამიერკავკასიის]] რკინიგზის გაერთიანების შესახებ
