--- a/ცხოველები.mw
+++ b/ცხოველები.mw
@@ -4,5 +4,75 @@
 
 ცხოველებს დიდი მნიშვნელობა აქვს ადამიანის ცხოვრებაში: იყენებენ საკვებად,  გამწევ ძალად, სამრეწველო ნედლეულად და სხვა. ზოგს ზიანი მოაქვს სახალხო მეურნეობის ამა თუ იმ დარგისათვის, ზოგი ცხოველებისა და ადამიანის პარაზიტია. მრავალი სახეობა დაუზოგავი განადგურების გამო მოისპო ან მოსპობის საფრთხის  წინაშე დგას. ამჯამად ქმედითი ღონისძიებები ტარდება ცხოველების რაოდენობრიობის რეგულირებისათვის,  დაცვისათვის, აღწარმოებისათვის (გამოცემულია კანონები, დაარსებულია ნაკრძალები, აღკვეთილები, შემოღებულია "წითელი წიგნი" და სხვა.).
 
-
+{{ესკიზი}}    
 [[კატეგორია:ცხოველები]]
+
+[[af:Animalia]]
+[[ar:حيوان]]
+[[als:Tiere]]
+[[an:Animal]]
+[[ast:Animal]]
+[[bm:Bagan]]
+[[bs:Životinjska bića]]
+[[br:Loen]]
+[[bg:Животни]]
+[[ca:Animal]]
+[[cs:Živočichové]]
+[[cy:Anifail]]
+[[da:Dyr]]
+[[de:Tiere]]
+[[et:Loomad]]
+[[el:Ζώα]]
+[[en:Animal]]
+[[simple:Animalia]]
+[[es:Animal]]
+[[eo:Animalo]]
+[[eu:Animalia]]
+[[fa:جانوران]]
+[[fr:Animaux]]
+[[fy:Dieren]]
+[[ga:Ainmhí]]
+[[ko:동물]]
+[[hr:Životinje]]
+[[io:Animalo]]
+[[id:Hewan]]
+[[ia:Animal]]
+[[is:Dýr]]
+[[it:Animalia]]
+[[he:בעלי חיים]]
+[[pam:Animal]]
+[[kw:Enyval]]
+[[ku:Ajal]]
+[[la:Animalia]]
+[[lv:Dzīvnieki]]
+[[lb:Déiereräich]]
+[[li:Diere]]
+[[lt:Gyvūnų karalystė]]
+[[mk:Животни]]
+[[ms:Haiwan]]
+[[nah:Yolkatl]]
+[[nl:Dieren (rijk)]]
+[[ja:動物]]
+[[no:Dyr]]
+[[nn:Dyr]]
+[[nds:Beest]]
+[[oc:Animalia]]
+[[pl:Zwierzęta]]
+[[pt:Animalia]]
+[[ru:Животные]]
+[[scn:Armali]]
+[[sk:Živočíchy]]
+[[sl:Živali]]
+[[sr:Животиња]]
+[[sh:Životinje]]
+[[su:Sato]]
+[[fi:Eläinkunta]]
+[[sv:Djur]]
+[[ta:விலங்கு]]
+[[th:สัตว์]]
+[[vi:Động vật]]
+[[tr:Hayvanlar]]
+[[chy:Hova]]
+[[uk:Тварини]]
+[[zh:动物]]
+[[zh-min-nan:Tōng-bu̍t]]
