--- a/ამფიბიები.mw
+++ b/ამფიბიები.mw
@@ -9,3 +9,39 @@
 
 
 [[კატეგორია:ამფიბიები]]
+
+
+[[ar:برمائيات]]
+[[ca:Amfibi]]
+[[cs:Obojživelníci]]
+[[cy:Amffibiad]]
+[[da:Padde]]
+[[de:Amphibien]]
+[[en:Amphibian]]
+[[eo:Amfibioj]]
+[[es:Anfibio]]
+[[fi:Sammakkoeläimet]]
+[[fr:Amphibia]]
+[[he:דו חיים]]
+[[hr:Vodozemci]]
+[[is:Amphibia]]
+[[it:Amphibia]]
+[[ja:両生類]]
+[[ko:양서류]]
+[[li:Amfibieë]]
+[[lt:Varliagyviai]]
+[[ms:Amfibia]]
+[[nds:Amphibia]]
+[[nl:Amfibieën]]
+[[no:Amfibier]]
+[[oc:Amphibia]]
+[[pl:Płazy]]
+[[pt:Amphibia]]
+[[ru:Земноводные]]
+[[simple:Amphibian]]
+[[sl:Dvoživke]]
+[[sv:Groddjur]]
+[[tr:Amfibyumlar]]
+[[uk:Земноводні]]
+[[zh:两栖动物]]
+[[zh:两栖动物]]
