*Empty MediaWiki Message*

--- a/ალკუნისებრნი.mw
+++ b/ალკუნისებრნი.mw
@@ -1,5 +1,5 @@
 [[სურათი:280px-Alcedo atthis 1 (Marek Szczepanek).jpg|thumb|right|ცისფერი ალკუნი]]
-'''ალკუნისებრნი''' (Alcedinidae),  [[ფრინველები|ფრინველების]] ოჯახი [[ყაპყაპისნაირნი|ყაპყაპისნაირთა]] რიგისა. მათი სხეულის სიგრძეა 16-47 სმ, უმრავლესობა მკვეთრი შეფერილობისაა. აქვთ დიდი თავი, გრძელი და სწორი [[ნისკარტი]], მოკლე და სუსტი ფეხები და ხშირი [[ბუმბული]]. ბინადრობენ [[მდინარე|მდინარეებისა]] და [[ტბა|ტბების]] ნაპირებზე, ზოგი - [[ტყე|ტყეებსა]] და [[ნახევრად უდაბნოს ზონები|ნახევრად უდაბნოებში]]. ბუდობენ სორო|სოროებში ან [[ხე|ხის]] [[ფუღურო|ფუღუროში]]. ალკუნისებრნი მონოგამები არიან, წელიწადში 1-3-ჯერ მრავლდებიან. დებენ 6-9 (ტროპიკული სახეობანი 2-3) [[კვერცხი|კვერცხს]]. ინკუბაციის პერიოდი 21 დღემდე გრძელდება. ალკუნისებრნი  იკვებებიან პატარა თევზები|თევზებით და წყლის [[მწერები|მწერებით]], ტროპიკული სახეობები კი [[მღრღნელები|მღრღნელებითა]] და[[ ქვეწარმავლები|ქვეწარმავლებითაც]]. ცნობილია 88 სახეობა, რომლითაგან საქართველოში გვხვდება ცისფერი ალკუნი (Alkedo attis).
+'''ალკუნისებრნი''' (Alcedinidae),  [[ფრინველები|ფრინველების]] ოჯახი [[ყაპყაპისნაირნი|ყაპყაპისნაირთა]] რიგისა. მათი სხეულის სიგრძეა 16-47 სმ, უმრავლესობა მკვეთრი შეფერილობისაა. აქვთ დიდი თავი, გრძელი და სწორი [[ნისკარტი]], მოკლე და სუსტი ფეხები და ხშირი [[ბუმბული]]. ბინადრობენ [[მდინარე|მდინარეებისა]] და [[ტბა|ტბების]] ნაპირებზე, ზოგი - [[ტყე|ტყეებსა]] და [[ნახევრად უდაბნოს ზონები|ნახევრად უდაბნოებში]]. ბუდობენ სორო|სოროებში ან [[ხე|ხის]] [[ფუღურო|ფუღუროში]]. ალკუნისებრნი მონოგამები არიან, წელიწადში 1-3-ჯერ მრავლდებიან. დებენ 6-9 (ტროპიკული სახეობანი 2-3) [[კვერცხი|კვერცხს]]. ინკუბაციის პერიოდი 21 დღემდე გრძელდება. ალკუნისებრნი  იკვებებიან პატარა [[თევზები|თევზებით]] და წყლის [[მწერები|მწერებით]], ტროპიკული სახეობები კი [[მღრღნელები|მღრღნელებითა]] და[[ ქვეწარმავლები|ქვეწარმავლებითაც]]. ცნობილია 88 სახეობა, რომლითაგან საქართველოში გვხვდება ცისფერი ალკუნი (Alkedo attis).
 
 
 
