*Empty MediaWiki Message*

--- a/ალკასებრნი.mw
+++ b/ალკასებრნი.mw
@@ -1,4 +1,4 @@
 [[სურათი:Alka.gif|thumb|right|ალკისნაირნი]]
-'''ალკისნაირნი'''(Alciformes  ან  Alcae),  [[ფრინველები|ფრინველების]]  რიგი. შეიცავს ერთ ოჯახს, რომლის 13 გვარი 20-მდე სახეობას აერთიანებს. მათი სხეულის სიგრძეა 15-50 სმ, წონა - 100-1200 გრამი. ალკისნაირთა სამი თითი ერთიმეორეს საცურავი აპკით უკავშირდება, უკანა თითი კი პატარაა. მამალსა და დედალს ერთნაირი შეფერილობა აქვს. ალკისნაირნი უმთავრესად ჩრდილოეთ ნახევარსფეროს ცივ და ზომიერ სარტყელში ბინადრობენ და მკაფიოდ გამოხატული ზღვის ფრინველები არიან - კარგად დაცურავენ და ყვინთავენ (10 მ სიღრმემდე). წყალქვეშ ფრთებით მოძრაობენ ("წყალქვეშა ფრენა"). ცხოვრობენ კოლონიებად: [[თოლია|თოლიებთან]] ერთად ქმნიან ე.წ. "ფრინველების ბაზრებს". დებენ 1-2 [[კვერცხი|კვერცხს]]. ინკუბაციური პერიოდი 24-25 დღეა. მართვეთა გამოკვებაში მონაწილეობს მამალიც. ალკისნაირნი იკვებებიან პატარა თევზები|თევზებითა და ზღვის უხერხემლოები|უხერხემლო ცხოველებით ([[კიბოსნაირნი|კიბოსნაირებით]], [[ჭიები|ჭიებით]], [[მოლუსკები|მოლუსკებით]]). საკვების ძებნისას ისინი ზოგჯერ 18-20 კმ შორდებიან სანაპიროს. აღსანიშნავია ატლანტის ოკეანის ჩრდილოეთ სანაპიროზე (ევროპა, ჩრდილოეთ ამერიკა) გავრცელებული ალკა (Alca torda), რომელიც ზამთრობით ხმელთაშუა ზღვის ნაპირამდეც აღწევს. ზოგიერთ რაიონში ალკისნაირნთ სარეწაო მნიშვნელობა აქვთ, იყენებენ მათ კვერცხს, ხორცს, [[ბუმბული|ბუმბულსა]] და გერმას.
+'''ალკისნაირნი'''(Alciformes  ან  Alcae),  [[ფრინველები|ფრინველების]]  რიგი. შეიცავს ერთ ოჯახს, რომლის 13 გვარი 20-მდე სახეობას აერთიანებს. მათი სხეულის სიგრძეა 15-50 სმ, წონა - 100-1200 გრამი. ალკისნაირთა სამი თითი ერთიმეორეს საცურავი აპკით უკავშირდება, უკანა თითი კი პატარაა. მამალსა და დედალს ერთნაირი შეფერილობა აქვს. ალკისნაირნი უმთავრესად ჩრდილოეთ ნახევარსფეროს ცივ და ზომიერ სარტყელში ბინადრობენ და მკაფიოდ გამოხატული ზღვის ფრინველები არიან - კარგად დაცურავენ და ყვინთავენ (10 მ სიღრმემდე). წყალქვეშ ფრთებით მოძრაობენ ("წყალქვეშა ფრენა"). ცხოვრობენ კოლონიებად: [[თოლია|თოლიებთან]] ერთად ქმნიან ე.წ. "ფრინველების ბაზრებს". დებენ 1-2 [[კვერცხი|კვერცხს]]. ინკუბაციური პერიოდი 24-25 დღეა. მართვეთა გამოკვებაში მონაწილეობს მამალიც. ალკისნაირნი იკვებებიან პატარა [[თევზები|თევზებითა]] და ზღვის [[უხერხემლოები|უხერხემლო]] ცხოველებით ([[კიბოსნაირნი|კიბოსნაირებით]], [[ჭიები|ჭიებით]], [[მოლუსკები|მოლუსკებით]]). საკვების ძებნისას ისინი ზოგჯერ 18-20 კმ შორდებიან სანაპიროს. აღსანიშნავია ატლანტის ოკეანის ჩრდილოეთ სანაპიროზე (ევროპა, ჩრდილოეთ ამერიკა) გავრცელებული ალკა (Alca torda), რომელიც ზამთრობით ხმელთაშუა ზღვის ნაპირამდეც აღწევს. ზოგიერთ რაიონში ალკისნაირნთ სარეწაო მნიშვნელობა აქვთ, იყენებენ მათ კვერცხს, ხორცს, [[ბუმბული|ბუმბულსა]] და გერმას.
 
 [[კატეგორია:ფრინველები]]
