*Empty MediaWiki Message*

--- a/თევზები.mw
+++ b/თევზები.mw
@@ -3,7 +3,7 @@
 თევზების სხეული სიმეტრიულია, გარდა კამბალასი, რომელსაც ორივე თვალი ცალ მხარეს აქვს. სხეული დაფარულია ქერცლით. ზღარბთევზას სხეული შემოსილია გრძელი ქიცვებით, ზუთხისნაირთა სხეულზე 5 მწკრივადაა განლაგებული ძვლოვანი ბალთები. ლოქოსა და სხვათა სხეული ტიტველია. თევზების კანი დიდი რაოდენობით შეიცავს ლორწოს გამომყოფ ერთუჯრედიან ჯირკვლებს. ღრმა ზღვის თევზების უმრავლესობას მანათობელი ორგანოები აქვს. თევზების შეფერილობა კანის ნაირგვარ პიგმენტებზეა დამოკიდებული. ჩვეულებრი, მათი ზურგის მხარე უფრო მუქია, ვიდრე მუცლისა.
 
 
-{{ესკიზი}}    
+{{იქთიოლოგია}}  
 [[კატეგორია:თევზები]]
 
 
