--- a/ალბა-ლონგა.mw
+++ b/ალბა-ლონგა.mw
@@ -1,4 +1,4 @@
-{{ისტორია-დასამუშავებელი}}
+{{რომის ისტორია}}
 '''ალბა-ლონგა''' (''[[ლათინური ენა|ლათ.]]'' Alba Longa), ლათინთა უძველესი ქალაქი იტალიაში. მდებარეობს ალბანოს მთის ძირში. გადმოცემით, ქალაქი დაუარსებია [[ენეას|ენეას]] ძეს [[ასკანიუს|ასკანიუსს]] ძვ. წ. 1152, რომზე 400 წლით ადრე. ალბა-ლონგა სათავეში ედგა 30 ლათინური ქალაქის კავშირს. 
 
 ძვ. წ. VII საუკუნეში რომის მეფე ტულიუეს ჰოსტილიუსმა დაანგრია იგი, მოსახლეობა რომში გადაასახლა და მათ რომის მოქალაქეობა უბოძა. 
