*Empty MediaWiki Message*

--- a/დომინატი.mw
+++ b/დომინატი.mw
@@ -1,4 +1,4 @@
-{{ისტორია-დასამუშავებელი}}
+{{რომის ისტორია}}
 {{რომის მთავრობა}}
 '''დომინანტი''' - მმართ ველობის ფორმა გვიანდელ [[რომის იმპერია|რომის იმპერიაში]].
 
