*Empty MediaWiki Message*

--- a/პრინციპატი.mw
+++ b/პრინციპატი.mw
@@ -1,4 +1,4 @@
-{{ისტორია-დასამუშავებელი}}
+{{რომის ისტორია}}
 {{რომის მთავრობა}}
 '''პრინციპატი''' - მმართველობის ფორმა ადრეულ [[რომის იმპერია|რომის იმპერიაში]].
 
