Reverted edit of 70.190.118.22, changed back to last version by MalafayaBot

--- a/ალბერტ_აინშტაინი.mw
+++ b/ალბერტ_აინშტაინი.mw
@@ -6,7 +6,7 @@
 
 საშუალო განათლებას აინშტაინი ლიტპოლდის გიმნაზიაში ([[მიუნხენი]]) ღებულობს, რომელიც იმ დროს საკმაოდ პროგრესულად ითვლებოდა. მათემატიკას იგი თორმეტი წლის ასაკიდან ეზიარა. მის შემდგომ განვითარებაზე დიდი ზეგავლენა მის ორ ბიძას მოუხდენია, რომლებიც მას სამეცნიერო, მათემატიკურ და ფილოსოფიურ წიგნებს უგზავნიდნენ. 
 
-ელექტროტექტნკის ბიზნესის გაკოტრების გამო აინშტაინების ოჯახი იტალიაში, ქალაქ პავიაში (მილანთან) გადაბარგდა. ალბერტი მიუნხენში დარჩა გიმნაზიის დასამთავრებლად, თუმცა ერთი სემესტრის შემდეგ 1895 წლის გაზაფხულზე ნაცნობი ექიმისგან მიღებულ სამედიცინო ცნობის საფუძველზე გიმნაზიას ტოვებს (მშობლების უკითხავად) და ოჯახთან იტალიაში გადადის. ამ ფაქტის გამო მას საშუალო სკოლის დამთავრების დიპლომი არ მიუღია. იმავე წელს ის შვეიცარიის ტექნოლოგიის ფედერალურ ინსტიტუტში ([[ციურიხი]]) ცდილობს ჩაბარებას, თუმცა მიუხედავად მათემატიკისა და მეცნიერების გამოცდების წარმატებით ჩაბარებისა, ის ლიბერალურ ხელოვნებაში იჭრება და ინსტიტუტში ვერ ხვდება. ამის შემდგომ ოჯახი მას აარაუში, [[შვეიცარია]], აგზავნის საშუალო სკოლის დასამთავრებლად და 1896 წლის სექტემბერში ის დიპლომს ღებულობს. ამ პერიოდში ის პროფესორ იოსტ ვინტელერის ოჯახში ცხოვრობდა. ოჯახის ქალიშვილი მარია მისი პირველი სიყვარული გახდა. მოგვიანებით ალბერტის და მაია ამ ოჯახის ძეზე, პოლზე ქორწინდება, ხოლო მისი მეგობარი მიშელ ბესო კი მათ მეორე ქალიშვილს ანას ირთავს. აინშტაინი საბოლოოდ წარმატებით აბარებს შესასვლელ გამოცდებს ციურიხის ტექნიკურ ინსტიტუტში და ოქტომბერში ციურიხში გადადის, მარია კი ამ პერიოდში ოლსბერგში მიდის მასწავლებლად. იმავე წელს აინშტაინი უარჰყოს ვიურტენბერგის ქვეშევრდომობას და"მოქალაქეობის" გარეშე რჩება. პოლიტექნიკუმის დამთავრების შემდეგ იგი ცოტა ხანს მასწავლებლობდა. [[1901]] წელს[[შვეიცარია|შვეიცარიის]] ქვეშევრდომობა მიიღო. [[1902]] [[ბერნი (ქალაქი)|ბერნის]] საპატენტო ბიუროში ტექნიკის ექსპერტად დაიწყო მუშაობა. ras
+ელექტროტექტნკის ბიზნესის გაკოტრების გამო აინშტაინების ოჯახი იტალიაში, ქალაქ პავიაში (მილანთან) გადაბარგდა. ალბერტი მიუნხენში დარჩა გიმნაზიის დასამთავრებლად, თუმცა ერთი სემესტრის შემდეგ 1895 წლის გაზაფხულზე ნაცნობი ექიმისგან მიღებულ სამედიცინო ცნობის საფუძველზე გიმნაზიას ტოვებს (მშობლების უკითხავად) და ოჯახთან იტალიაში გადადის. ამ ფაქტის გამო მას საშუალო სკოლის დამთავრების დიპლომი არ მიუღია. იმავე წელს ის შვეიცარიის ტექნოლოგიის ფედერალურ ინსტიტუტში ([[ციურიხი]]) ცდილობს ჩაბარებას, თუმცა მიუხედავად მათემატიკისა და მეცნიერების გამოცდების წარმატებით ჩაბარებისა, ის ლიბერალურ ხელოვნებაში იჭრება და ინსტიტუტში ვერ ხვდება. ამის შემდგომ ოჯახი მას აარაუში, [[შვეიცარია]], აგზავნის საშუალო სკოლის დასამთავრებლად და 1896 წლის სექტემბერში ის დიპლომს ღებულობს. ამ პერიოდში ის პროფესორ იოსტ ვინტელერის ოჯახში ცხოვრობდა. ოჯახის ქალიშვილი მარია მისი პირველი სიყვარული გახდა. მოგვიანებით ალბერტის და მაია ამ ოჯახის ძეზე, პოლზე ქორწინდება, ხოლო მისი მეგობარი მიშელ ბესო კი მათ მეორე ქალიშვილს ანას ირთავს. აინშტაინი საბოლოოდ წარმატებით აბარებს შესასვლელ გამოცდებს ციურიხის ტექნიკურ ინსტიტუტში და ოქტომბერში ციურიხში გადადის, მარია კი ამ პერიოდში ოლსბერგში მიდის მასწავლებლად. იმავე წელს აინშტაინი უარჰყოს ვიურტენბერგის ქვეშევრდომობას და"მოქალაქეობის" გარეშე რჩება. პოლიტექნიკუმის დამთავრების შემდეგ იგი ცოტა ხანს მასწავლებლობდა. [[1901]] წელს[[შვეიცარია|შვეიცარიის]] ქვეშევრდომობა მიიღო. [[1902]] [[ბერნი (ქალაქი)|ბერნის]] საპატენტო ბიუროში ტექნიკის ექსპერტად დაიწყო მუშაობა.
 
 ==პროფესიული კარიერა და მოღვაწეობა==
 [[სურათი:Einstein patentoffice.jpg|thumb|right|აინშტაინი 1905 წელს]] 1909-1911 წლებში აინშტაინი ციურიხის [[უნივერსიტეტი|უნივერსიტეტის]] [[პროფესორი|პროფესორია]], [[1911]]-[[1912]] - [[პრაღა|პრაღის]] გერმ. უნივერსიტეტის თეორიული ფიზიკის კათედრის გამგე. [[1912]] კვლავ ციურიხის პოლიტექნიკუმის პროფესორია. 1913 აინშტაინს ირჩევენ [[პრუსია | პრუსიის]] მეცნიერებათა აკადემიის წევრად, ხოლო [[1914]] გადადის [[ბერლინი|ბერლინში]], სადაც წლების მანძილზე ფიზიკის ინსტიტუტის დირექტორი და ბერლინის უნივერსიტეტის პროფესორია. გერმანიაში ფაშისტური რეჟიმის გაბატონების შემდეგ ([[1933]]), აინშტაინმა პროტესტის ნიშნად უარი განაცხადა პრუსიის აკადემიის წევრობაზე და აშშ-ში გადასახლდა. აქ იგი მიიწვიეს პრისტონის ფუნდამენტურ გამოკვლევათა ინსტიტუტში, სადაც გარდაცვალებამდე მუშაობდა.
