*Empty MediaWiki Message*

--- a/სუპერკომპიუტერი.mw
+++ b/სუპერკომპიუტერი.mw
@@ -4,7 +4,7 @@
 ყოველ ნახევარწლედში ხდება სუპერკომპიუტერების ტოპ-500 სიის შედგენა, რომელშიც დღესდღეისობით [[IBM BlueGene/L ]](დანიშნულება: ფიზიკური მოვლენების სიმულაცია) ლიდერობს.
 
 
-
+{{კომპიუტერი}}
 [[cs:Superpočítač]]
 [[de:Supercomputer]]
 [[en:Supercomputer]]
